# upnp

./: .gitmodules  .travis.yml  .upnptags  CMakeLists.txt  ErrorHandling.md  README.md  meson.build  todo  upnp.sublime-project  wercker.yml
UPnPFramework.xcodeproj/: project.pbxproj
UPnPFramework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UPnPFramework.xcodeproj/xcuserdata/dirk.xcuserdatad/xcschemes/: UPnPFramework.xcscheme  UPnPFrameworkNative.xcscheme  UPnPUnitTests.xcscheme  xcschememanagement.plist
UnitTests/: eventlistenermock.h  testxmls.h  upnpavtransporttest.cpp  upnpclientmock.h  upnpcontentdirectorytest.cpp  upnprenderingcontroltest.cpp  upnpservicebasetest.cpp
cmake/: FindBoost.cmake
inc/: rapidxml.hpp  rapidxml_print.hpp
inc/upnp/: asio.h  stringview.h  upnp.action.h  upnp.actionresponse.h  upnp.asio.h  upnp.asyncgenerator.h  upnp.avtransport.client.h  upnp.avtransport.service.h  upnp.avtransport.types.h  upnp.client.h  upnp.clientinterface.h  upnp.connectionmanager.client.h  upnp.connectionmanager.service.h  upnp.connectionmanager.types.h  upnp.contentdirectory.client.h  upnp.contentdirectory.service.h  upnp.contentdirectory.types.h  upnp.controlpoint.h  upnp.coroutine.h  upnp.device.h  upnp.devicescanner.h  upnp.deviceservice.h  upnp.dlna.info.h  upnp.factory.h  upnp.flags.h  upnp.generator.h  upnp.http.client.h  upnp.http.functions.h  upnp.http.parser.h  upnp.http.parseutils.h  upnp.http.reader.h  upnp.http.server.h  upnp.http.types.h  upnp.item.h  upnp.lastchangevariable.h  upnp.mediarenderer.h  upnp.mediaserver.h  upnp.protocolinfo.h  upnp.renderingcontrol.client.h  upnp.renderingcontrol.service.h  (+67 more)
src/: URI.cpp  URI.h  guid.cpp  guid.h  rapidxml.hpp  stringview.h  upnp.action.cpp  upnp.actionresponse.cpp  upnp.avtransport.client.cpp  upnp.avtransport.service.cpp  upnp.avtransport.typeconversions.cpp  upnp.avtransport.typeconversions.h  upnp.client.cpp  upnp.client.h  upnp.connectionmanager.client.cpp  upnp.connectionmanager.service.cpp  upnp.connectionmanager.typeconversions.cpp  upnp.connectionmanager.typeconversions.h  upnp.contentdirectory.client.cpp  upnp.contentdirectory.service.cpp  upnp.contentdirectory.typeconversions.cpp  upnp.contentdirectory.typeconversions.h  upnp.contentdirectory.types.cpp  upnp.controlpoint.cpp  upnp.device.cpp  upnp.devicescanner.cpp  upnp.dlna.info.cpp  upnp.enumutils.h  upnp.factory.cpp  upnp.gena.server.cpp  upnp.gena.server.h  upnp.http.client.cpp  upnp.http.client.h  upnp.http.functions.cpp  upnp.http.parser.cpp  upnp.http.parser.h  upnp.http.reader.cpp  upnp.http.server.cpp  upnp.http.types.cpp  upnp.http.utils.cpp  (+59 more)
test/: CMakeLists.txt  FindGMock.cmake  benchmark.cpp  controlpointtest.cpp  coro.cpp  devicediscover.h  eventlistenermock.h  gmock-gtest-all.cpp  httpreadertest.cpp  main.cpp  mediarenderertest.cpp  mediaservertest.cpp  meson.build  testenvironment.h  testutils.h  testxmls.h  upnp.actiontest.cpp  upnp.avtransport.clienttest.cpp  upnp.avtransport.servicetest.cpp  upnp.avtransportclienttest.cpp  upnp.avtransporttest.cpp  upnp.clientmock.h  upnp.clienttest.cpp  upnp.clienttestbase.h  upnp.connectionmanager.clienttest.cpp  upnp.connectionmanager.servicetest.cpp  upnp.connectionmanagerclienttest.cpp  upnp.contentdirectory.clienttest.cpp  upnp.contentdirectoryclienttest.cpp  upnp.coroutinetest.cpp  upnp.devicescannertest.cpp  upnp.gena.servertest.cpp  upnp.http.clienttest.cpp  upnp.http.parsertest.cpp  upnp.http.readertest.cpp  upnp.lastchangevariabletest.cpp  upnp.mediarenderertest.cpp  upnp.mediaservertest.cpp  upnp.renderingcontrol.clienttest.cpp  upnp.renderingcontrol.servicetest.cpp  (+31 more)
test/gmock/: gmock.h
test/gtest/: gtest.h
test/testframework/: gmock-gtest-all.cpp
test/testframework/gmock/: gmock.h
test/testframework/gtest/: gtest.h
upnp/: UPnPFramework-Prefix.pch  upnpbrowser.cpp  upnpbrowser.h  upnpclient.cpp  upnpclient.h  upnpcontrolpoint.cpp  upnpcontrolpoint.h  upnpdevice.h  upnpdevicescanner.cpp  upnpdevicescanner.h  upnphttpget.cpp  upnphttpget.h  upnpitem.cpp  upnpitem.h
